--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
            </div>
         </div>
 
-    </div>
+    </div><!--Container-->
 </section>
 
 <div class="statistics">
@@ -183,7 +183,7 @@
                 </div>
         </div>
 
-    </div>
+    </div><!--Container-->
 </section>
 
 
@@ -262,7 +262,7 @@
                </div>
            </div>
         </div>
-    </div>
+    </div><!--Container-->
 </section>
 
 
@@ -347,7 +347,7 @@
 
            </div>
         </div>
-    </div>
+    </div><!--Container-->
 </section>
 
 
@@ -438,7 +438,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!--Works-->
 </section>
 
 <div class="section">
@@ -507,7 +507,7 @@
 
         </div>
 
-    </div>
+    </div><!--Container-->
 </section>
 
 
@@ -606,7 +606,7 @@
             </div>
 
         </div>
-    </div>
+    </div><!--Container-->
 </section>
 
 
@@ -730,7 +730,7 @@
             © 2016 MoGo free PSD template by <span>Laaqiq</span>
         </div>
 
-    </div>
+    </div><!--Container-->
 </footer>
 
 
