--- a/photo.html
+++ b/photo.html
@@ -17,9 +17,9 @@
         <div class="header__inner">
             <div class="header__logo">MoGo</div>
             <nav class="nav">
-                <a class="nav__link active" href="index.html">Home</a>
+                <a class="nav__link" href="index.html">Home</a>
                 <a class="nav__link" href="#">Service</a>
-                <a class="nav__link" href="photo.html">Work</a>
+                <a class="nav__link active" href="photo.html">Work</a>
                 <a class="nav__link" href="#">Blog</a>
                 <a class="nav__link" href="#">Contact</a>
             </nav>
@@ -29,12 +29,14 @@
 
 
 
+
+
 <div class="intro">
     <div class="container">
 
       <div class="intro__inner">
-            <h2 class="intro__suptitle">Creative Template</h2>
-            <h1 class="intro__title">Welcome to Home</h1>
+            <h2 class="intro__suptitle">Фото епта</h2>
+            <h1 class="intro__title">Фото епта</h1>
             <a class="btn" href="#">Learn More</a>
         </div>
 
